# ArduPlot

./: .gitignore  .gitmodules  CMakeLists.txt  JsonKeyNaming.md  LICENSE  README.md  TODO.md  config.default.ini  imgui.ini
include/: ArduPlot.h  application.h  arduplot.h  im_console.h  input_stream.h  log.h  string_utils.h  stringutils.h  usb_input.h  utilities.h  utils.h
libs/SerialPort/: CMakeLists.txt
libs/SerialPort/include/: enumserial.h  serialport.h
libs/SerialPort/src/: enumserial.cpp  serialport.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt  README.md
libs/imgui/include/: imgui_custom.h
libs/imgui/src/: imgui_custom.cpp
libs/implot/: CMakeLists.txt  implot.cpp  implot.h  implot_demo.cpp  implot_internal.h  implot_items.cpp
libs/implot/backends/: implot_backend.h  implot_impl_opengl3.cpp
libs/json/: CMakeLists.txt
scripts/: build.sh  buildandrun.sh  configure.sh  configure_debug.sh  debug.sh  debug_lldb.sh  run.sh
src/: ArduPlot.cpp  application.cpp  arduplot.cpp  im_console.cpp  input_stream.cpp  log.cpp  main.cpp  string_utils.cpp  usb_input.cpp  utilities.cpp  utils.cpp
